--- a/app/(main)/components/UserCard.module.css
+++ b/app/(main)/components/UserCard.module.css
@@ -1,12 +1,12 @@
-.userCard{
-    background: #FFF;
-    border-radius: 0px;
-    box-shadow: none;   
-    border-top: 2px solid #E2E8F0; 
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    padding: 24px;
+.userCard {
+  background: #fff;
+  border-radius: 0px;
+  box-shadow: none;
+  border-top: 2px solid #e2e8f0;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 24px;
 }
 
 .noBottomMargin {
@@ -18,7 +18,7 @@
   height: 3.4375rem;
   border-radius: 50%;
   object-fit: cover;
-  background: #FFF;
+  background: #fff;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.05);
   flex-shrink: 0;
 }
@@ -27,7 +27,7 @@
   width: 3.4375rem;
   height: 3.4375rem;
   border-radius: 50%;
-  background: #D9D9D9;
+  background: #d9d9d9;
   flex-shrink: 0;
 }
 
@@ -42,7 +42,7 @@
   text-decoration: none;
 }
 
-.userName{
+.userName {
   color: #000;
   font-family: Montserrat;
   font-size: 16px;
@@ -52,8 +52,8 @@
   margin: 0;
 }
 
-.userEmail{
-  color: #4A5568;
+.userEmail {
+  color: #4a5568;
   font-family: Montserrat;
   font-size: 16px;
   font-style: normal;
